The 'reset to current branch' button was looking very scary, so I wanted to commit before I did a misclick lmao